# halld_evtgen

./: .gitignore  CMakeLists.txt  DECAY.DEC  DECAY.XML  DECAY_2010.DEC  DECAY_2011.DEC  History.txt  Makefile  Pythia8_README.txt  README  README.md  Tauola_README.txt  configure  convertDecayFile.py  evt.pdl  setupEvtGen-R01-02-00.sh  setupEvtGen-R01-03-00.sh  setupEvtGen-R01-04-00.sh  setupEvtGen.sh
EvtGenBase/: EvtDalitzReso.hh  EvtParticleDecayList.hh  EvtResonance2.hh  EvtSemiLeptonicAmp.hh  EvtVector4R.hh
EvtGenExternal/: EvtExternalGenFactory.hh  EvtPythiaEngine.hh  EvtTauolaEngine.hh
EvtGenModels/: EvtAbsExternalGen.hh  EvtBCSFF.hh  EvtBCTFF.hh  EvtBCVFF.hh  EvtBLLNuL.hh  EvtBLLNuLAmp.hh  EvtBTo3hCP.hh  EvtBToDiBaryonlnupQCD.hh  EvtBToDiBaryonlnupQCDFF.hh  EvtBToKpipiCP.hh  EvtBcSMuNu.hh  EvtBcTMuNu.hh  EvtBcVHad.hh  EvtBcVMuNu.hh  EvtBsMuMuKK.hh  EvtDalitzTable.hh  EvtExternalGenFactory.hh  EvtLambdacPHH.hh  EvtLb2Baryonlnu.hh  EvtLb2plnuLCSR.hh  EvtLb2plnuLQCD.hh  EvtNoRadCorr.hh  EvtPhotosEngine.hh  EvtPythia.hh  EvtPythiaEngine.hh  EvtSLDiBaryonAmp.hh  EvtTauolaEngine.hh  EvtWHad.hh  Evtbs2llGammaISRFSRAmp.hh
cmake/Modules/: CompilerFlags.cmake  ExternalDependencies.cmake  FindHepMC2.cmake  FindPhotos++.cmake  FindPythia8.cmake  InstallPaths.cmake
cmake/Templates/: EvtGenConfig.cmake.in
src/: CMakeLists.txt  EvtGen.cpp  Makefile
src/EvtGenBase/: EvtAbsLineShape.cpp  EvtAmp.cpp  EvtBlattWeisskopf.cpp  EvtConst.cpp  EvtDalitzReso.cpp  EvtDecayTable.cpp  EvtHepMCEvent.cpp  EvtParser.cpp  EvtParticle.cpp  EvtRelBreitWignerBarrierFact.cpp  EvtResonance2.cpp  EvtSemiLeptonicAmp.cpp  EvtVector4R.cpp
src/EvtGenExternal/: EvtExternalGenFactory.cpp  EvtExternalGenList.cpp  EvtPhotosEngine.cpp  EvtPythia6CommandConverter.cpp  EvtPythiaEngine.cpp  EvtTauolaEngine.cpp
src/EvtGenModels/: EvtBCSFF.cpp  EvtBCTFF.cpp  EvtBCVFF.cpp  EvtBCVFF2.cpp  EvtBLLNuL.cpp  EvtBLLNuLAmp.cpp  EvtBTo3hCP.cpp  EvtBTo3pi.F  EvtBTo3piP00.F  EvtBToDiBaryonlnupQCD.cpp  EvtBToDiBaryonlnupQCDFF.cpp  EvtBToKpipi.F  EvtBToKpipiCP.cpp  EvtBcSMuNu.cpp  EvtBcTMuNu.cpp  EvtBcToNPi.cpp  EvtBcVHad.cpp  EvtBcVMuNu.cpp  EvtBsMuMuKK.cpp  EvtCBTo3piMPP.cpp  EvtCBTo3piP00.cpp  EvtDDalitz.cpp  EvtDalitzTable.cpp  EvtExternalGenFactory.cpp  EvtFlatQ2.cpp  EvtHQET2FF.cpp  EvtLambdaB2LambdaV.cpp  EvtLambdacPHH.cpp  EvtLb2Baryonlnu.cpp  EvtLb2BaryonlnuFF.cpp  EvtLb2Lll.cpp  EvtLb2plnuLCSR.cpp  EvtLb2plnuLCSRFF.cpp  EvtLb2plnuLQCD.cpp  EvtLb2plnuLQCDFF.cpp  EvtModelReg.cpp  EvtPhotosEngine.cpp  EvtPythia.cpp  EvtPythiaEngine.cpp  EvtRareLbToLll.cpp  (+16 more)
test/: CMakeLists.txt  Makefile  evt_dalitz.cc  evtgenlhc_test1.cc  example1.cc  exampleWriteHepMC.cc
validation/: CMakeLists.txt  Makefile  compareDalitz.C  genDalitzDecays.sh  genExampleRootFiles.cc  genRootDecayChain.cc  testCPVDecays.cc
validation/DalitzFiles/: DalitzDecay1.dec  DalitzDecay23.xml  DalitzDecay25.xml  DalitzDecay4.xml  DalitzDecay5.xml  DalitzDecay6.xml  DalitzDecays.xml
validation/TauolaFiles/: Btautau.dec
